2025-03-14T01:46:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13848173029 # 593
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 925 1405 / 940 1420
* notice: next accum: outdated-unq outdated-all / unq all: 928 1408 / 941 1421
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-27 2025-02-28] / [2025-03-13]

2025-03-13T01:48:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13825265302 # 592
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-13
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 924 1404 / 939 1419
* notice: next accum: outdated-unq outdated-all / unq all: 925 1405 / 940 1420
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-26] / [2025-02-27 2025-03-12]

2025-03-12T01:47:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13801897246 # 591
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-12
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 924 1404 / 938 1418
* notice: next accum: outdated-unq outdated-all / unq all: 924 1404 / 939 1419
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-11]

2025-03-11T01:48:32Z: