@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-03-14T01:46:57Z",
+  "timestamp" : "2025-03-15T01:46:17Z",
   "count_outdated" : 1408,
   "uniques_outdated" : 928,
-  "count" : 1421,
-  "uniques" : 941,
+  "count" : 1422,
+  "uniques" : 942,
   "clones" : [
     {
       "timestamp": "2025-03-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-03-02T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
