@@ -1,3 +1,12 @@
+2025-03-15T01:46:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13868259903 # 594
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-15
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 928 1408 / 941 1421
+* notice: next accum: outdated-unq outdated-all / unq all: 928 1408 / 942 1422
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-03-01 2025-03-14]
+
 2025-03-14T01:46:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13848173029 # 593
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
